--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "mario.js",
   "devDependencies": {},
   "scripts": {
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
